src/objects/Cause__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cause_Code__c</fullName>
        <label>Cause Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_Description__c</fullName>
        <label>Cause Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Count__c</fullName>
        <label>Defect Count</label>
        <summaryForeignKey>Defect_Cause__c.Cause__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Cause</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Type_Required_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Type__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type is required</errorMessage>
    </validationRules>
</CustomObject>